# bioloid

./: ProjectHome.md  Projects.md
firmware/motion/: BLC-Protocol.h  BLV.pnproj  README  buggy.c  buggy.h  comms.c  comms.py  dynamixel-comms.h  led.c  makefile  motion.c  robot.h  zgb_hal.c
firmware/motion/Flash/: Bioloid_Ver115.hex  robot-dash-ok.mtn
firmware/motion/Poses/: Pages.xls  walk.txt
firmware/motion/testpackets/: balance-off.txt  balance-on.txt  buggy-forward.txt
trunk/firmware/motion/: AUTHORS  bioloid.h  bioloid_upload  comms.h  dxl_hal.c  dynamixel-comms.c  dynamixel.c  dynamixel.h  gyro.c  gyro.h  led.h  main.c  motion.h  robot-dash.h  serial.c  serial.h
trunk/firmware/motion/Flash/: Bioloid_Ver114.hex  Motion-pages-1-127-10-10-2007.hex  phils-robot-old.mtn  robot-dash-ok-v2.mtn
trunk/firmware/motion/testpackets/: pose-1.txt  pose-3-legout.txt  pose-60-forward.txt  servo16-512.txt
trunk/utilities/BioloidControl/: CMakeLists.txt  svn_import_log  uncrustify.bash
trunk/utilities/BioloidControl/controller/: RobotWrapper.cpp  RobotWrapper.hex  makefile  readme.txt
trunk/utilities/BioloidControl/controller/include/: cmd.h  communication.h  crc.h  interpolation.h  recharge.h  timer.h  types.h
trunk/utilities/BioloidControl/controller/src/: communication.cpp
trunk/utilities/BioloidControl/main/: Makefile  config.xml  config_humanoid_inverted.xml  config_physics.xml  dh_hexapod.xml  dh_humanoid_inverted.xml  main.cpp  motion.mtn
trunk/utilities/BioloidControl/main/include/: cmd.h  commands.h  crc.h  global.h  interpolation.h  list.h  motion.h  platform.h  robot.h  tinystr.h  types.h  util.h  wrapper.h
trunk/utilities/BioloidControl/main/motions/: human_arm.xml  human_kick.xml  human_walk.xml
trunk/utilities/BioloidControl/main/scripts/: hex_stand2.s  hex_walk.s  hex_walk2.s  hex_walk3.s  hex_walk4b.s  hum_knees.s  hum_kneesup.s
trunk/utilities/BioloidControl/main/show/: bow.test  bow0.test  bow1.test  bowGOOD.test  clap0.test  clap1.test  clap3.test  fight0.test  fight1.test  fight2.test  playshow.s  swing.test  swing0.test
trunk/utilities/BioloidControl/main/src/: commands.cpp  list.cpp  motion.cpp  parser.cpp  platform.cpp  robot.cpp  test.cpp  tinyxmlparser.cpp  util.cpp  wrapper.cpp  y.tab.c
trunk/utilities/BioloidControl/parser/: parser.y
trunk/utilities/BioloidControl/physics/: physics.conf  physics_humanoid.xml
trunk/utilities/BioloidControl/physics/doc/: howto.txt  physics_running.php
trunk/utilities/BioloidControl/physics/drawstuff-obsolete/src/: Makefile.am
trunk/utilities/BioloidControl/physics/frame/: assemble_movie.pl  svg_to_mpeg.pl
trunk/utilities/BioloidControl/physics/include/: bioloid.h  main.h  scene.h  util.h  world.h
trunk/utilities/BioloidControl/physics/misc/: Bioloid.pl
trunk/utilities/BioloidControl/physics/src/: bioloid.cpp  body.cpp  main.cpp  scene.cpp  sensor.cpp  servo.cpp  util.cpp  world.cpp
trunk/utilities/BioloidControl/physics/xml-generation/: PortugeseHumanoid.txt  PortugeseHumanoid.xls  perl-to-xml.pl
trunk/utilities/BioloidControl/viewer/: readme.txt
trunk/utilities/DynamixelMonitor/: Controller.m  HistogramView.m  Motion.h  MyDocument.M  MyDocument.h  Page.h  Pose.m  ReadMe.txt  TODO  interpolation.cpp  interpolation.h
trunk/utilities/DynamixelMonitor/DynamixelMonitor.xcodeproj/: local.mode1v3  local.pbxuser  project.pbxproj
trunk/utilities/DynamixelMonitor/English.lproj/: MyDocument.xib
trunk/utilities/ROS/awesomeo_controller/: TypeA.urdf  TypeA.xacro  display.launch  mainpage.dox  manifest.xml  wrapper.xml
trunk/utilities/ROS/awesomeo_controller/launch/: display.launch
utilities/BioloidControl/: uncrustify.cfg
utilities/BioloidControl/controller/: RobotWrapper.pnproj
utilities/BioloidControl/controller/include/: constants.h  uart.h  wrapper.h
utilities/BioloidControl/controller/src/: crc.cpp  interpolation.cpp  recharge.cpp  timer.cpp  uart.cpp  wrapper.cpp
utilities/BioloidControl/main/: CMakeLists.txt  Doxyfile  bioloid.dev  config_hexapod.xml  config_humanoid.xml  config_test.xml  dh_humanoid.xml  dh_test.xml
utilities/BioloidControl/main/include/: configuration.h  constants.h  parser.h  practicalsocket.h  test.h  tinyxml.h  vars.h  vecmath.h  y.tab.h
utilities/BioloidControl/main/motions/: human_stand.xml
utilities/BioloidControl/main/scripts/: angletest.s  disttest.s  hex_shift.s  hex_stand.s  hex_walk4.s  hex_walk5.s  hum_kneesdown.s  hum_playshow.s  hum_stand.s  lighttest.s
utilities/BioloidControl/main/show/: bezier.test  clap2.test  fight3.test  fight4.test  laufen.test  laufenr.test  stand.test  swing1.test  swing2.test
utilities/BioloidControl/main/src/: cmd.cpp  configuration.cpp  crc.cpp  global.cpp  interpolation.cpp  lex.yy.c  practicalsocket.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  vecmath.cpp
utilities/BioloidControl/parser/: parser.l  readme.txt
utilities/BioloidControl/physics/: CMakeLists.txt  README  configure.in  scite_physics.xml
utilities/BioloidControl/physics/doc/: index.php  index_new.php  physics_about.php  physics_building.php
utilities/BioloidControl/physics/include/: sensor.h  servo.h
utilities/BioloidControl/physics/misc/: dh_XML_to_delimited.pl  simloid_C_to_delimited.pl
utilities/BioloidControl/physics/src/: bioloid_devices.cpp  geom.cpp  joint.cpp
utilities/BioloidControl/viewer/: CMakeLists.txt  Makefile  viewer.cpp  viewer.dev  viewerwin.cpp
utilities/DynamixelMonitor/: Controller.h  HistogramView.h  HistogramView.m  Motion.c  MyDocument.M  MyDocument.h  Page.m  Pose.h  Pose.m  TODO  communication.cpp  communication.h  constants.h  crc.h  interpolation.cpp  uart.h
utilities/DynamixelMonitor/DynamixelMonitor.xcodeproj/: local.mode1v3  local.pbxuser  project.pbxproj
utilities/DynamixelMonitor/English.lproj/: MyDocument.xib
utilities/ROS/awesomeo_controller/: TypeA.dae  TypeA.xacro  display.launch  manifest.xml
utilities/ROS/awesomeo_controller/nodes/: controller.py
wiki/: Projects.wiki
